--- a/app/templates/components/navigation.html
+++ b/app/templates/components/navigation.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% load tooling %}
 
 {% block content %}
   <script type="text/javascript" src="{% static "js/navigation.js" %}"></script>
@@ -10,7 +11,8 @@
         <section class="items">
           {% url 'pages:home' as home_url %}
           <a href="{% url 'pages:home' %}" id="Home" class="{% if request.path == home_url %}active{% endif %}">{% trans "Home" %}</a>
-          <a href="#" id="Phenotypes">Phenotypes</a>
+          {% url 'phenotypes:phenotype' as phenotype_url %}
+          <a href="#" id="Phenotypes" class="{% if request.path|within:phenotype_url %}active{% endif %}">Phenotypes</a>
           <a href="#" id="WorkingSets">WorkingSets</a>
           <a href="#" id="API">API</a>
           <a href="#" id="About">{% trans "About" %}</a>
