--- a/app/shared/static/styles/variables.scss
+++ b/app/shared/static/styles/variables.scss
@@ -49,6 +49,11 @@ $brand-map-none: (
   'accent-purple': $solitude,
   'accent-semi-transparent': rgba($black, 0.05),
 
+  'switch-size': 50px,
+  'switch-thumb-color': $off_white,
+  'switch-bg-color': $lightest_grey,
+  'switch-bg-active-color': $soft_blue,
+
   'masthead_gutter': 12rem,
   'masthead_mobile_gutter': 1rem,
   'homepage-background-color': $solitude,
