--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
 <html lang="{{ LANGUAGE_CODE }}" data-brand="none">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{% block title %} Django Boilerplate {% endblock title %}</title>
     <link href="{% sass_src 'styles/main.scss' %}" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="{% static "js/utils.js" %}"></script>
